Fix formatting, remove extra spaces

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html{
     min-height:100%;
 }
 #bg {
-    background: url(image.jpg);
+    background: url(mountain1.jpg);
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -22,7 +22,7 @@ body{
     height: 100%;
     top: 0; right: 0; left: 0;
     background-size: cover;
-    border-style:none;     
+    border-style:none;
     margin:0;
     min-height:100%;
     /*ez noob parallax???? default: parallax on*/
@@ -56,10 +56,10 @@ body{
     left:0;
     top:0;
     text-align: center;
-    background-color: rgba(88, 88, 88, 0.67); 
+    background-color: rgba(88, 88, 88, 0.67);
     z-index:2;
 }
-#splash:before{ 
+#splash:before{
     background-size: cover;
     content: '';
     position: absolute;
@@ -67,18 +67,18 @@ body{
     width:100%;
     height: 100%;
     top: 0; right: 0; left: 0;
-    
+
     /*background-image:url(mountain1.jpg);
-    filter: blur(5px); 
-    -webkit-filter: blur(5px); 
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
     -moz-filter: blur(5px);
-    -o-filter: blur(5px); 
+    -o-filter: blur(5px);
     -ms-filter: blur(5px);
     filter: url(blur.svg#blur);
     filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='5');
     */
 }
-header{      
+header{
    /* box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5), 0 10px 24px 0 rgba(0, 0, 0, 0.4);*/
 }
 
@@ -133,7 +133,7 @@ h2{
     font-family: 'Roboto Normal', sans-serif;
     border-style:none;
     padding: 8px 16px;
-    font-size: 1.5em; 
+    font-size: 1.5em;
     font-weight:500;
 }
 
@@ -188,7 +188,7 @@ a:visited{
 a:hover{
     color:hotpink;
     text-decoration: underline;
-}   
+}
 a:active{
     color:darkmagenta;
     text-decoration: underline;
@@ -257,7 +257,7 @@ a:active{
     #dropdown{
         display:none;
     }
-    
+
     div#nav-alt{
         display:none;
     }
@@ -353,7 +353,7 @@ a:active{
         width: 100%;
         background: white;
     }
-    
+
     /*put menu button top corner*/
     button.shrunk-nav-button{
         position: fixed;
@@ -389,13 +389,13 @@ a:active{
 
 /*menu button*/
 button.shrunk-nav-button{
-    background-color: rgba(0, 0, 0, 0.82); 
+    background-color: rgba(0, 0, 0, 0.82);
     border-radius:0;
     margin:0;
     font-size: 1.5em;
     height: 36px;
     width: 40px;
-    display:block;  
+    display:block;
 }
 
 
@@ -473,14 +473,14 @@ i{
 
 /*loading animation*/
 div#load_screen{
-	background: #000;
-	position: fixed;
+    background: #000;
+    position: fixed;
     z-index:100;
-	top: 0px;
+    top: 0px;
     right: 0px;
-	width: 100%;
-	height: 1600px;	
-           
+    width: 100%;
+    height: 1600px;
+
     /*for fade effect*/
     opacity: 0.9;
 }
@@ -488,11 +488,11 @@ div#load_screen{
     display:none;
 }
 div#load_text{
-	color:#FFF;
-	font-size: 1.25em;
+    color:#FFF;
+    font-size: 1.25em;
     width:120px;
-	height:24px;
-	margin: 300px auto;
+    height:24px;
+    margin: 300px auto;
 }
 /*loading animation*/
 .loader {
